[package]
name = "my_test"
version = "0.1.0"
authors = ["Mohsen <flashfa8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
pwhash = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
serde_derive = "1.0.106"
lazy_static = "1.4.0"
